-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: None
-
Labels:
-
Module:
-
Guilty Commit:0.4.12-dev-752-g6bc61f63f1e0ad20ab09f881d6968558eba9a8e6
0.4.12-dev-751-g6bf5a8a works as expected, but 0.4.12-dev-752-g6bc61f6 fails to connect to the server with a popup that states, "ERROR: Bad packet header".
Error still present in latest 0.4.12-dev-788-g0649f25.
Likely related to changes to networking in https://github.com/reactos/reactos/commit/6bc61f63f1e0ad20ab09f881d6968558eba9a8e6
ReactOS clean install in VBox, no Gecko install. Not much shown in log.