[0.4.12] Revert "[MSAFD] Implement socket options SO_SNDBUF and SO_RCVBUF"

To avoid CORE-15804 MSTSC fails to connect with error "ERROR: Bad packet header"

This reverts commit 0.4.12-dev-752-g
6bc61f63f1e0ad20ab09f881d6968558eba9a8e6.