dll/win32/msafd/misc/dllmain.c
@@ -2866,21 +2866,8 @@ WSPSetSockOpt(
                   return SOCKET_ERROR;
               }
 
-              SetSocketInformation(Socket,
-                                   AFD_INFO_SEND_WINDOW_SIZE,
-                                   NULL,
-                                   (PULONG)optval,
-                                   NULL,
-                                   NULL,
-                                   NULL);
-              GetSocketInformation(Socket,
-                                   AFD_INFO_SEND_WINDOW_SIZE,
-                                   NULL,
-                                   &Socket->SharedData->SizeOfSendBuffer,
-                                   NULL,
-                                   NULL,
-                                   NULL);
-
+              /* TODO: The total per-socket buffer space reserved for sends */
+              ERR("Setting send buf to %x is not implemented yet\n", optval);
               return NO_ERROR;
 
            case SO_RCVBUF:
@@ -2890,21 +2877,8 @@ WSPSetSockOpt(
                   return SOCKET_ERROR;
               }
 
-              SetSocketInformation(Socket,
-                                   AFD_INFO_RECEIVE_WINDOW_SIZE,
-                                   NULL,
-                                   (PULONG)optval,
-                                   NULL,
-                                   NULL,
-                                   NULL);
-              GetSocketInformation(Socket,
-                                   AFD_INFO_RECEIVE_WINDOW_SIZE,
-                                   NULL,
-                                   &Socket->SharedData->SizeOfSendBuffer,
-                                   NULL,
-                                   NULL,
-                                   NULL);
-
+              /* TODO: The total per-socket buffer space reserved for receives */
+              ERR("Setting receive buf to %x is not implemented yet\n", optval);
               return NO_ERROR;
 
            case SO_ERROR:
